--- a/navigation/header.html
+++ b/navigation/header.html
@@ -6,7 +6,7 @@
   <link href="../css/modules.css" rel="stylesheet">
   <link href="../css/type.css" rel="stylesheet">
   <link href="../css/grid.css" rel="stylesheet">
-  <link href="navigation.css" rel="stylesheet">
+  <link href="header.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
