--- a/_patterns/cards/product-card.html
+++ b/_patterns/cards/product-card.html
@@ -1,8 +1,8 @@
-<div class="product-card">
+<a class="product-card block" href="{{include.data.url}}">
   <img class="img-flex" src="{{include.data.image}}" alt="">
-  <div class="text-center pad-t-1-2 product-info">
+  <div class="pad-t-1-2 product-info">
     <h4>{{include.data.name}}</h4>
     <p class="discript">{{include.data.description}}</p>
     <p class="price">${{include.data.price}}</p>
   </div>
-</div>
+</a>
