--- a/index.html
+++ b/index.html
@@ -10,4 +10,8 @@ layout: default
 
 {% pattern cards/sectioncard %}
 
-{% pattern cards/product-card %}
+{% pattern sections/product-details %}
+
+{% pattern sections/return-policy %}
+
+{% pattern banner/sales-banner %}
