--- a/_patterns/sections/product-details.html
+++ b/_patterns/sections/product-details.html
@@ -4,7 +4,7 @@
     <li class="details">
       <div class="wrapper">
         <h2>{{page.name}}</h2>
-        <p>{{page.price}}</p>
+        <p>${{page.price}}</p>
         <p>{{page.description}}</p>
         <!--One or more major components use at least 50% leather tanned in a facility rated Silver or higher by a third-party environmental audit. The Leather Working Group judges and classifies tanneries based on energy use, waste production and water treatment. -->
         {% pattern Form/Size %}
