--- a/index.html
+++ b/index.html
@@ -11,3 +11,7 @@ layout: default
 {% pattern cards/sectioncard %}
 
 {% pattern sections/shipping-address %}
+
+{% pattern sections/shipping-option %}
+
+{% pattern sections/payment-info %}
