--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -1,20 +1,8 @@
-<!DOCTYPE html>
-<html lang="en-ca">
-<head>
-  <meta charset="utf-8">
-  <title></title>
-  <link href="../css/modules.css" rel="stylesheet">
-  <link href="../css/type.css" rel="stylesheet">
-  <link href="../css/grid.css" rel="stylesheet">
-  <link href="footer.css" rel="stylesheet">
-</head>
-<body>
-
   <footer class="footer-bottom">
     <div class="">
       <div class="">
         <ul class="footer-tags list-group">
-          <li><a href="#">Shop</a></li>
+          <li><a href="#">Privacy, cookies & terms</a></li>
           <li><a href="#">About us</a></li>
           <li><a href="#">Customer service</a></li>
           <li><a href="#">Gift cards</a></li>
@@ -55,6 +43,3 @@
       </div>
     </div>
   </footer>
-
-</body>
-</html>
