--- a/index.html
+++ b/index.html
@@ -10,8 +10,4 @@ layout: default
 
 {% pattern cards/sectioncard %}
 
-{% pattern sections/shipping-address %}
-
-{% pattern sections/shipping-option %}
-
-{% pattern sections/payment-info %}
+{% pattern buttons/button %}
