--- a/_patterns/cards/sectioncard.html
+++ b/_patterns/cards/sectioncard.html
@@ -4,28 +4,28 @@
       <div class="card unit xs-1 s-1 m-1-2 l-1-2">
         <img class="cardimage" src="/images/shoes.jpg" alt="">
         <div class="texts">
-          <a class="btn ball" href="#">SHOP</a>
+          <a class="btn ball" href="#">SHOP NOW</a>
         </div>
       </div>
 
       <div class="card unit xs-1 s-1 m-1-2 l-1-2">
         <img class="cardimage" src="/images/shoes.jpg" alt="">
         <div class="texts">
-          <a class="btn ball" href="#">SHOP</a>
+          <a class="btn ball" href="#">SHOP  NOW</a>
         </div>
       </div>
 
       <div class="card unit xs-1 s-1 m-1-2 l-1-2">
         <img class="cardimage" src="/images/shoes.jpg" alt="">
         <div class="texts">
-          <a class="btn ball" href="#">SHOP</a>
+          <a class="btn ball" href="#">SHOP  NOW</a>
         </div>
       </div>
 
       <div class="card unit xs-1 s-1 m-1-2 l-1-2">
         <img class="cardimage" src="/images/shoes.jpg" alt="">
         <div class="texts">
-          <a class="btn ball" href="#">SHOP</a>
+          <a class="btn ball" href="#">SHOP NOW</a>
         </div>
       </div>
 
