--- a/_patterns/navigation/header.html
+++ b/_patterns/navigation/header.html
@@ -1,5 +1,3 @@
-
-
   <header>
     <nav class="navbar">
       <div class="">
@@ -31,9 +29,9 @@
             </li>
           </ul>
         </div>
-        <div class="center-text titlebar">
+        <div class="text-center titlebar">
           <h1><a class="logo push-1-2" href="/">Shoeland</a></h1>
-          <ul class="tags list-group-inline push-0 center-text">
+          <ul class="tags list-group-inline push-0 text-center">
             <li><a href="#">Men</a></li>
             <li><a href="#">Women</a></li>
             <li><a href="/products/">Products</a></li>
