--- a/_patterns/banner/newsletter.html
+++ b/_patterns/banner/newsletter.html
@@ -1,5 +1,5 @@
 <div class="newsletter text-center">
   <h2>Sign up for newsletter</h2>
   <p>Sign up now and get 25% off one item.</p>
-  <a class="btn" href="#">SIGN UP</a>
+  <a class="btn call" href="#">SIGN UP</a>
 </div>
