--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -2,7 +2,7 @@
     <div class="">
       <div class="">
         <ul class="footer-tags list-group">
-          <li><a href="#">Privacy, cookies & terms</a></li>
+          <li><a href="/terms-privacy/">Privacy, cookies & terms</a></li>
           <li><a href="#">About us</a></li>
           <li><a href="#">Customer service</a></li>
           <li><a href="#">Gift cards</a></li>
