--- a/_patterns/sections/payment-info.html
+++ b/_patterns/sections/payment-info.html
@@ -50,7 +50,7 @@
       </div>
 
     <div class="text-center place unit s-1">
-      <button class="btn" type="place">Place order</button>
+      <button class="btn call" type="place">Place order</button>
       <input type="hidden" name="place" value="Request to join the mission">
     </div>
     </fieldset>
