--- a/_patterns/sections/product-details.html
+++ b/_patterns/sections/product-details.html
@@ -11,8 +11,8 @@
 
       </div>
       <div class="text-center buttonss">
-        <a class="btn add" href="#">add to cart</a>
-        <a class="btn buy" href="#">buy now</a>
+        <a class="btn add call" href="#">add to cart</a>
+        <a class="btn buy call" href="#">buy now</a>
       </div>
     </li>
   </ul>
