--- a/_patterns/navigation/header.html
+++ b/_patterns/navigation/header.html
@@ -20,7 +20,7 @@
               </a>
             </li>
             <li >
-              <a href="#">
+              <a href="checkout">
                 <i class="icon i-18">
                   <img src="/images/cart-clear.svg" alt="">
                 </i>
